--- a/PonyFaces/Base.lproj/Main.storyboard
+++ b/PonyFaces/Base.lproj/Main.storyboard
@@ -74,6 +74,29 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dT8-Rc-zP6">
                                 <rect key="frame" x="496" y="290" width="20" height="20"/>
                             </activityIndicatorView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1PE-IY-JTQ">
+                                <rect key="frame" x="206.5" y="323" width="187.5" height="36"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sorry, no matches." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S9v-HJ-CIr">
+                                        <rect key="frame" x="0.0" y="7.5" width="143.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SadFace" translatesAutoresizingMaskIntoConstraints="NO" id="aLz-q0-5uh">
+                                        <rect key="frame" x="151.5" y="0.0" width="36" height="36"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="S9v-HJ-CIr" firstAttribute="centerY" secondItem="aLz-q0-5uh" secondAttribute="centerY" id="Fg9-W6-SK5"/>
+                                    <constraint firstItem="S9v-HJ-CIr" firstAttribute="leading" secondItem="1PE-IY-JTQ" secondAttribute="leading" id="IsK-QJ-9o9"/>
+                                    <constraint firstItem="aLz-q0-5uh" firstAttribute="top" secondItem="1PE-IY-JTQ" secondAttribute="top" id="cWi-Le-iRI"/>
+                                    <constraint firstAttribute="bottom" secondItem="aLz-q0-5uh" secondAttribute="bottom" id="jFB-8E-gPr"/>
+                                    <constraint firstItem="aLz-q0-5uh" firstAttribute="leading" secondItem="S9v-HJ-CIr" secondAttribute="trailing" constant="8" id="ugT-Sc-GKi"/>
+                                    <constraint firstAttribute="trailing" secondItem="aLz-q0-5uh" secondAttribute="trailing" id="vAq-05-7tp"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -85,6 +108,7 @@
                             <constraint firstItem="rAR-5J-Lzq" firstAttribute="centerX" secondItem="u5v-yg-p3m" secondAttribute="centerX" id="ChR-m9-asR"/>
                             <constraint firstItem="dT8-Rc-zP6" firstAttribute="leading" secondItem="wj3-KB-mQN" secondAttribute="trailing" constant="-28" id="NUZ-7J-f3O"/>
                             <constraint firstAttribute="trailingMargin" secondItem="VCh-GT-dGe" secondAttribute="trailing" id="PVg-aD-Nx5"/>
+                            <constraint firstItem="1PE-IY-JTQ" firstAttribute="top" secondItem="wj3-KB-mQN" secondAttribute="bottom" constant="8" id="R12-TG-xpd"/>
                             <constraint firstItem="sGa-eG-9EC" firstAttribute="centerX" secondItem="u5v-yg-p3m" secondAttribute="centerX" id="UCt-MR-aSc"/>
                             <constraint firstItem="VCh-GT-dGe" firstAttribute="leading" secondItem="wj3-KB-mQN" secondAttribute="trailing" constant="8" id="UHQ-2h-qXb"/>
                             <constraint firstItem="wj3-KB-mQN" firstAttribute="top" secondItem="rAR-5J-Lzq" secondAttribute="bottom" constant="8" id="VQ5-Cl-o4T"/>
@@ -96,6 +120,7 @@
                             <constraint firstItem="rAR-5J-Lzq" firstAttribute="top" secondItem="UYq-E0-P4S" secondAttribute="bottom" id="npZ-4V-3sF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dT8-Rc-zP6" secondAttribute="trailing" id="oK8-Do-fLO"/>
                             <constraint firstItem="dT8-Rc-zP6" firstAttribute="leading" secondItem="VCh-GT-dGe" secondAttribute="trailing" constant="8" id="v5Z-TU-Seg"/>
+                            <constraint firstItem="1PE-IY-JTQ" firstAttribute="centerX" secondItem="u5v-yg-p3m" secondAttribute="centerX" id="xmP-gW-psC"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -110,6 +135,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="activityIndicator" destination="dT8-Rc-zP6" id="5do-W2-eY2"/>
+                        <outlet property="noResultsView" destination="1PE-IY-JTQ" id="lbc-zt-wib"/>
                         <outlet property="searchButton" destination="VCh-GT-dGe" id="yQx-Aw-xhG"/>
                         <outlet property="searchTextField" destination="wj3-KB-mQN" id="xuu-lU-0dp"/>
                         <segue destination="Xr7-Ww-dKB" kind="show" identifier="ShowSearchResults" id="m57-Im-QlK"/>
@@ -358,6 +384,7 @@
     <resources>
         <image name="748-heart.png" width="28" height="25"/>
         <image name="PonyFace.png" width="450" height="450"/>
+        <image name="SadFace" width="36" height="36"/>
         <image name="SolidHeart.png" width="28" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
