--- a/PonyFaces/Base.lproj/LaunchScreen.storyboard
+++ b/PonyFaces/Base.lproj/LaunchScreen.storyboard
@@ -20,16 +20,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X3G-1C-eSK">
-                                <rect key="frame" x="75" y="35.5" width="450" height="528"/>
+                                <rect key="frame" x="175" y="135.5" width="250" height="328"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PonyFace.png" translatesAutoresizingMaskIntoConstraints="NO" id="ehP-qY-LK0">
-                                        <rect key="frame" x="0.0" y="78" width="450" height="450"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HappyFace" translatesAutoresizingMaskIntoConstraints="NO" id="ehP-qY-LK0">
+                                        <rect key="frame" x="0.0" y="78" width="250" height="250"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ehP-qY-LK0" secondAttribute="height" multiplier="1:1" id="sDj-1H-mZA"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pony Faces" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ne9-9g-ZkI">
-                                        <rect key="frame" x="136.5" y="0.0" width="177" height="58"/>
+                                        <rect key="frame" x="36.5" y="0.0" width="177" height="58"/>
                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="36"/>
                                         <color key="textColor" red="0.9882352941176471" green="0.42352941176470588" blue="0.70196078431372544" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -63,6 +63,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="PonyFace.png" width="450" height="450"/>
+        <image name="HappyFace" width="250" height="250"/>
     </resources>
 </document>
