--- a/PonyFaces/Base.lproj/Main.storyboard
+++ b/PonyFaces/Base.lproj/Main.storyboard
@@ -13,9 +13,10 @@
             <objects>
                 <navigationController id="kTJ-w3-yQT" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" systemItem="search" id="v5y-7d-4xm"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3PG-5Q-PFO">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="3PG-5Q-PFO">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.99744850397109985" green="0.41150885820388794" blue="0.70374852418899536" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="sYu-Kf-iXH" kind="relationship" relationship="rootViewController" id="cX2-RT-Xfa"/>
@@ -34,23 +35,23 @@
                         <viewControllerLayoutGuide type="bottom" id="nZq-PZ-CQJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="u5v-yg-p3m">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" image="HappyFace" translatesAutoresizingMaskIntoConstraints="NO" id="rAR-5J-Lzq">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" misplaced="YES" image="HappyFace" translatesAutoresizingMaskIntoConstraints="NO" id="rAR-5J-Lzq">
                                 <rect key="frame" x="198" y="72" width="205" height="205"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="rAR-5J-Lzq" secondAttribute="height" multiplier="1:1" id="mrq-Ti-UVk"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sGa-eG-9EC" userLabel="Bottom Spacer View">
-                                <rect key="frame" x="295" y="277" width="10" height="0.0"/>
+                                <rect key="frame" x="295" y="245" width="10" height="0.0"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="10" id="djn-HU-7xj"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UYq-E0-P4S" userLabel="Top Spacer View">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UYq-E0-P4S" userLabel="Top Spacer View">
                                 <rect key="frame" x="295" y="72" width="10" height="0.0"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -58,7 +59,7 @@
                                 </constraints>
                             </view>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search tags" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wj3-KB-mQN">
-                                <rect key="frame" x="20" y="285" width="504" height="30"/>
+                                <rect key="frame" x="20" y="253" width="504" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
@@ -66,17 +67,17 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VCh-GT-dGe">
-                                <rect key="frame" x="532" y="284" width="48" height="30"/>
+                                <rect key="frame" x="532" y="252" width="48" height="30"/>
                                 <state key="normal" title="Search"/>
                                 <connections>
                                     <action selector="search:" destination="sYu-Kf-iXH" eventType="touchUpInside" id="Hd9-M1-bVT"/>
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dT8-Rc-zP6">
-                                <rect key="frame" x="496" y="290" width="20" height="20"/>
+                                <rect key="frame" x="496" y="258" width="20" height="20"/>
                             </activityIndicatorView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sorry, no matches." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S9v-HJ-CIr">
-                                <rect key="frame" x="229" y="323" width="143.5" height="20.5"/>
+                                <rect key="frame" x="229" y="291" width="143.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -155,12 +156,12 @@
             <objects>
                 <tableViewController modalPresentationStyle="overCurrentContext" id="Xr7-Ww-dKB" customClass="PonyFacesTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="155" sectionHeaderHeight="28" sectionFooterHeight="28" id="5Lb-lf-Kbj">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PonyFaceTableViewCell" id="hbI-KK-4BT" customClass="PonyFaceTableViewCell">
-                                <rect key="frame" x="0.0" y="92" width="600" height="155"/>
+                                <rect key="frame" x="0.0" y="28" width="600" height="155"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hbI-KK-4BT" id="dor-ct-aEp">
                                     <rect key="frame" x="0.0" y="0.0" width="567" height="154.5"/>
@@ -243,10 +244,10 @@
                         <viewControllerLayoutGuide type="bottom" id="f3T-BH-aAl"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="KB1-6Q-uuX">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="240" translatesAutoresizingMaskIntoConstraints="NO" id="ALu-aK-gcc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" misplaced="YES" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="240" translatesAutoresizingMaskIntoConstraints="NO" id="ALu-aK-gcc">
                                 <rect key="frame" x="180" y="121" width="240" height="240"/>
                             </imageView>
                             <view contentMode="scaleToFill" misplaced="YES" placeholderIntrinsicWidth="100" placeholderIntrinsicHeight="98" translatesAutoresizingMaskIntoConstraints="NO" id="ZBH-Jl-Zri" customClass="PonyFacesTagsView">
@@ -261,12 +262,12 @@
                                     </mask>
                                 </variation>
                             </view>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="qtd-am-p7M">
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="qtd-am-p7M">
                                 <rect key="frame" x="282" y="222" width="37" height="37"/>
                                 <color key="color" red="0.99228733777999878" green="0.0" blue="0.89954441785812378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </activityIndicatorView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="18L-WB-wsl">
-                                <rect key="frame" x="243.5" y="72" width="113" height="41"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="18L-WB-wsl">
+                                <rect key="frame" x="243" y="72" width="113" height="41"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPL-6G-ou5" customClass="SYFavoriteButton">
                                         <rect key="frame" x="72" y="0.0" width="41" height="41"/>
@@ -364,9 +365,10 @@
             <objects>
                 <navigationController modalPresentationStyle="overCurrentContext" id="awm-5n-D7q" customClass="PonyFaceFavoritesViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Favorites" image="HollowHeart" id="Z2G-sj-y72"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Hi8-IR-fd0">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Hi8-IR-fd0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.99744850397109985" green="0.41150885820388794" blue="0.70374852418899536" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="Xr7-Ww-dKB" kind="relationship" relationship="rootViewController" id="3mL-1w-zdP"/>
@@ -386,4 +388,5 @@
         <segue reference="3mL-1w-zdP"/>
         <segue reference="wKV-Jq-laQ"/>
     </inferredMetricsTieBreakers>
+    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
